package org.ting.pattern.adapter.inter;

/**
 * 媒体播放器接口
 *
 * @author 张韧炼
 * @create 2019-07-04 下午2:09
 **/
public interface MediaPlayer {
    void play(String audioType, String fileName);
}
